src/fe/CleanCooks/src/app/log-in/log-in.component.scss
@use '../../styles' as styles;
.login-card {
  margin-top: 4em;
  margin-left: 46em;
  width: 20%;
  height: 50%;
  border-radius: 10px;
  text-align: center;
  background-color: #fff;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  display: flex;
  flex-direction: column;
  text-font: styles.$text-font-family;
}
.form-field {
  margin-top: 2em;
  margin-bottom: 2em;
}
.mat-fab-button {
  margin-top: 2em;
  margin-bottom: 2em;
}

